Refactored the physics engine to use delta time calculations, decoupling game speed from framerate, and implemented time-based Coyote Time for improved jumping mechanics. Updated the game loop, entity logic, and configuration values to support the new physics scale and time-based input windows.